# huffman-compressor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  demo.txt  main.cpp
header/decoding/: bit_reader.h  decompression.h  extract_meta _data.h
header/encoding/: compression.h  frequency_table.h  huffman_map.h  huffman_queue.h  huffman_tree.h  meta_data.h  write_encoded_data.h
src/decoding/: bit_reader.cpp  decompression.cpp  extract_meta_data.cpp
src/encoding/: compression.cpp  frequency_table.cpp  huffman_map.cpp  huffman_queue.cpp  huffman_tree.cpp  meta_data.cpp  write_encoded_data.cpp
